--- a/static/time.css
+++ b/static/time.css
@@ -1,3 +1,4 @@
+/* Common styles */
 html, body {
   height: 100%;
 }
@@ -6,6 +7,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: 'Space Mono', fixed;
+}
+
+body > * {
+  max-width: 32rem;
 }
 
 .button-list {
