--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,13 +3,10 @@
   <head>
     <meta name="viewport" content="initial-scale=1">
 
-    <base href="../../"> <!-- relative page url: assessment/<player> -->
+    <base href="/2016/treasure/"> <!-- relative page url: assessment/<player> -->
 
-    <!--
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="time.css" rel="stylesheet">
-    <script src="time.js"></script>
-    -->
   </head>
   <body>
     <h1>Welcome to {{player_name}}</h1>
