Show claimed states on claim templates
Sorry it's so messy!

--- a/static/time.css
+++ b/static/time.css
@@ -44,6 +44,10 @@ button {
   height: 7.75rem;
   padding: 1rem;
 }
+button.claimed {
+  background: black;
+  color: white;
+}
 button:focus {
   outline: none;
 }
