--- a/static/time.css
+++ b/static/time.css
@@ -33,7 +33,7 @@ button {
   font-family: 'Space Mono', fixed;
   font-weight: bold;
 
-  transition: border-width 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: border-width 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275), background-color 0.25s ease-in-out;
 
   display: flex;
   box-sizing: border-box;
