--- a/static/time.css
+++ b/static/time.css
@@ -1,3 +1,18 @@
+/* Font definitions */
+@font-face {
+  font-family: 'Space Mono';
+  src: url('fonts/SpaceMono-Regular.ttf');
+}
+@font-face {
+  font-family: 'Space Mono';
+  font-weight: bold;
+  src: url('fonts/SpaceMono-Bold.ttf');
+}
+@font-face {
+  font-family: 'Space Mono';
+  font-style: italic;
+  src: url('fonts/SpaceMono-Italic.ttf');
+}
 /* Common styles */
 html, body {
   height: 100%;
