--- a/templates/claim-cube.html
+++ b/templates/claim-cube.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/2016/treasure/">
     <link href="time.css" rel="stylesheet">
